# radial

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  db.rs  helpers.rs  id.rs  lib.rs  main.rs  output.rs
src/commands/: clean.rs  edit.rs  goal.rs  init.rs  list.rs  mod.rs  prep.rs  ready.rs  show.rs  status.rs  task.rs
src/models/: contract.rs  goal.rs  mod.rs  outcome.rs  task.rs
tests/: integration_test.rs
