[package]
name = "radial"
version = "0.1.0"
edition = "2024"
authors = ["Devin Ward <devissquared@gmail.com>"]
description = "Task orchestration for LLM agents with contract-based coordination"
readme = "README.md"
license = "MIT"
repository = "https://github.com/devsquared/radial"
homepage = "https://github.com/devsquared/radial"
documentation = "https://docs.rs/radial"
keywords = ["cli", "tasks", "agents", "llm", "orchestration"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/*", "testing/*", ".radial/*"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
nanoid = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.13"
serde_json = "1.0"
